# HWAudioProcessSDK

./: README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/huawu/fivesmart/audio/apm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/hwapm/: CMakeLists.txt  apm_wrapper.cpp  com_huawu_fivesmart_audio_apm_Apm.h
app/src/main/cpp/hwapm/webrtc/: Android.mk  CMakeLists.txt  common_types.h
app/src/main/cpp/hwapm/webrtc/base/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/common_audio/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/common_audio/resampler/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/common_audio/signal_processing/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/common_audio/vad/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_coding/codecs/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_coding/codecs/isac/main/source/: Android.mk  CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/aec/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/aecm/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/agc/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/beamformer/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/intelligibility/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/ns/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/transient/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/utility/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/modules/audio_processing/vad/: CMakeLists.txt
app/src/main/cpp/hwapm/webrtc/system_wrappers/include/: file_wrapper.h
app/src/main/cpp/hwapm/webrtc/system_wrappers/source/: CMakeLists.txt
app/src/main/java/com/huawu/fivesmart/audio/apm/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/huawu/fivesmart/audio/apm/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
